--- a/app/src/main/res/layout/activity_imagecap.xml
+++ b/app/src/main/res/layout/activity_imagecap.xml
@@ -30,6 +30,7 @@
         android:padding="1dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
+        android:textColor="@android:color/white"
         android:background="@android:color/transparent"
         android:layout_width="120dp" />
 
@@ -40,6 +41,7 @@
         android:padding="4dp"
         android:layout_gravity="top|center"
         android:text="@string/vp_00"
+        android:textColor="@android:color/white"
         android:background="@android:color/holo_blue_dark"
         android:visibility="gone"
         />
@@ -53,6 +55,37 @@
         android:src="@drawable/circulo_seamensor"
         android:padding="0dp"
         android:visibility="gone"        />
+
+    <LinearLayout
+        android:id="@+id/videoRecorderTimeLayout"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_toEndOf="@id/vp_list"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/cronoText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:text="REC"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold"
+            android:background="@android:color/transparent"
+            />
+
+        <Chronometer
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recordingChronometer"
+            android:textColor="@android:color/white"
+            android:background="@android:color/transparent"
+            />
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -270,11 +303,14 @@
         android:layout_gravity="end"
         android:layout_alignParentEnd="true"
         android:clickable="true"
-        opencv:fabSize="normal"
+        opencv:fabSize="mini"
         opencv:srcCompat="@android:drawable/ic_menu_camera"
         android:layout_below="@id/arSwitchLinearLayout"
         android:visibility="invisible"
-        android:layout_margin="16dp" />
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="16dp"
+        opencv:backgroundTint="@android:color/holo_blue_dark" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/videoCameraShutterButton"
@@ -283,18 +319,37 @@
         android:layout_gravity="end"
         android:layout_alignParentEnd="true"
         android:clickable="true"
-        opencv:fabSize="normal"
-        opencv:srcCompat="@android:drawable/ic_menu_camera"
+        opencv:fabSize="mini"
+        opencv:srcCompat="@android:drawable/presence_video_online"
         android:layout_below="@id/cameraShutterButton"
         android:visibility="invisible"
-        android:layout_margin="16dp" />
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="16dp"
+        opencv:backgroundTint="@android:color/holo_blue_dark" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/videoCameraShutterStopButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_alignParentEnd="true"
+        android:clickable="true"
+        opencv:fabSize="mini"
+        opencv:srcCompat="@android:drawable/presence_video_online"
+        android:layout_below="@id/videoCameraShutterButton"
+        android:visibility="gone"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="16dp"
+        opencv:backgroundTint="@android:color/holo_red_dark" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="top|center"
-        android:layout_below="@id/videoCameraShutterButton"
+        android:layout_below="@id/videoCameraShutterStopButton"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp">
 
@@ -307,7 +362,7 @@
             opencv:srcCompat="@android:drawable/ic_dialog_map"
             opencv:backgroundTint="@android:color/holo_green_dark"
             android:layout_marginTop="0dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/timeCertifiedButton"
@@ -317,8 +372,8 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_recent_history"
             opencv:backgroundTint="@android:color/holo_green_dark"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/connectedToServerButton"
@@ -329,7 +384,7 @@
             opencv:srcCompat="@android:drawable/stat_notify_sync"
             opencv:backgroundTint="@android:color/holo_green_dark"
             android:layout_marginBottom="0dp"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="5dp" />
 
     </LinearLayout>
 
