--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -14,7 +14,8 @@
         android:layout_height="match_parent"
         android:visibility="visible"
         opencv:show_fps="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <com.mymensor.TouchImageView
         android:id="@+id/imageView1"
@@ -35,60 +36,53 @@
 
     <EditText
         android:id="@+id/descVPEditText"
-        android:layout_width="wrap_content"
+        android:layout_toEndOf="@id/vp_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:lines="2"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textView2"
         android:gravity="left|top"
         android:text="@string/desc_vp_empty"
         android:textColor="@android:color/holo_blue_light"
         android:background="@android:color/background_dark"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:inputType="text|textCapSentences|textAutoCorrect"
         android:imeOptions="actionDone"
         />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:layout_alignParentTop="true"
+    <LinearLayout
+        android:id="@+id/linearLayoutVpArStatus"
+        android:layout_below="@id/descVPEditText"
         android:layout_toEndOf="@id/vp_list"
-        android:gravity="center"
-        android:text="@string/vp_00"
-        android:background="@android:color/holo_blue_dark"
+        android:orientation="horizontal"
         android:visibility="invisible"
-        />
-
-    <TextView
-        android:id="@+id/vpAcquiredStatus"
+        android:background="@drawable/border_marker_id"
+        android:layout_margin="8dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:layout_toEndOf="@id/vp_list"
-        android:layout_below="@+id/textView2"
-        android:gravity="center"
-        android:text="@string/vpNotAcquiredStatus"
-        android:textColor="@android:color/holo_blue_light"
-        android:background="@android:color/background_dark"
-        android:visibility="invisible"
-        />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/idMarkerNumberTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@id/vp_list"
-        android:layout_below="@+id/vpAcquiredStatus"
-        android:textColor="@android:color/white"
-        android:background="@android:color/holo_blue_dark"
-        android:visibility="visible"
-        android:layout_margin="16dp"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center"
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:text="@string/textview_vp_ar"
+            android:textAlignment="gravity" />
+
+        <TextView
+            android:id="@+id/vpAcquiredStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center"
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:text="--"
+            android:layout_gravity="end" />
+
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/waitingTrkLoading"
@@ -100,34 +94,48 @@
         android:padding="0dp"
         android:visibility="gone"        />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/buttonCallImagecap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:clickable="true"
-        opencv:fabSize="mini"
-        opencv:srcCompat="@drawable/logo_mymensor_new3"
-        android:visibility="visible"
-        android:layout_margin="16dp" />
 
     <LinearLayout
         android:id="@+id/linearLayoutQtyVps"
+        android:layout_below="@id/descVPEditText"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="top|center"
-        android:layout_toEndOf="@id/vp_list"
+        android:layout_alignParentEnd="true"
+        android:gravity="end"
         android:visibility="visible"
-        android:layout_alignParentBottom="true"
         >
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonCallImagecap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            opencv:fabSize="mini"
+            opencv:srcCompat="@drawable/logo_mymensor"
+            android:visibility="visible"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="20dp"
+
+            />
 
         <LinearLayout
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="8dp"
+                android:textColor="@android:color/white"
+                android:text="@string/button_text_decrease_qtyvps"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"/>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/buttonDecreaseQtyVps"
@@ -137,8 +145,17 @@
                 android:clickable="true"
                 opencv:fabSize="mini"
                 opencv:srcCompat="@drawable/ic_remove_black_18dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginStart="16dp" />
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                 />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -146,15 +163,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="8dp"
                 android:textColor="@android:color/white"
-                android:text="@string/button_text_decrease_qtyvps"
-                android:layout_marginBottom="8dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                android:text="@string/button_text_increase_qtyvps"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/buttonIncreaseQtyVps"
@@ -164,17 +176,10 @@
                 android:clickable="true"
                 opencv:fabSize="mini"
                 opencv:srcCompat="@drawable/ic_add_black_18dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp" />
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                 />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="8dp"
-                android:textColor="@android:color/white"
-                android:text="@string/button_text_increase_qtyvps"
-                android:layout_marginBottom="8dp" />
 
         </LinearLayout>
 
@@ -183,11 +188,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayoutConfigCaptureVps"
+        android:layout_below="@id/descVPEditText"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        android:layout_alignParentBottom="true"
+
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -196,6 +202,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayoutCaptureNewVp"
+            android:layout_below="@id/descVPEditText"
             android:orientation="horizontal"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
@@ -231,7 +238,40 @@
             opencv:fabSize="normal"
             opencv:srcCompat="@android:drawable/ic_menu_camera"
             android:visibility="invisible"
-            android:layout_margin="16dp" />
+            android:layout_margin="16dp"
+            opencv:backgroundTint="@android:color/holo_blue_bright" />
+
+
+        <LinearLayout
+            android:id="@+id/linearLayoutMarkerId"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:background="@drawable/border_marker_id"
+            android:layout_marginBottom="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:padding="8dp"
+                android:textColor="@android:color/white"
+                android:text="@string/button_marker_id"
+                android:textAlignment="gravity" />
+
+            <TextView
+                android:id="@+id/idMarkerNumberTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center"
+                android:padding="8dp"
+                android:textColor="@android:color/white"
+                android:text="--"
+                android:layout_gravity="end" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/linearLayoutAmbiguousVp"
@@ -291,32 +331,6 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/buttonId20mmToggle"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="82dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/custom_button"
-            android:textColor="#000000"
-            android:onClick="onButtonClick"
-            android:padding="10dp"
-            android:text="@string/button_id_20mm_vp_toggle"
-            android:visibility="invisible"
-            />
-
-        <Button
-            android:id="@+id/buttonId100mmToggle"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="82dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/custom_button"
-            android:textColor="#000000"
-            android:onClick="onButtonClick"
-            android:padding="10dp"
-            android:text="@string/button_id_100mm_vp_toggle"
-            android:visibility="invisible"
-            />
-
     </LinearLayout>
 
     <Button
@@ -355,5 +369,7 @@
         android:text="@string/button_reject_vp_photo"
         android:visibility="gone"
         />
+
+
 
 </RelativeLayout>
