Commit MyMensor OpenCV 21dez2016 21h42min

--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -205,7 +205,7 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="invisible"
 
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
