--- a/app/src/main/res/layout-v21/activity_imagecap.xml
+++ b/app/src/main/res/layout-v21/activity_imagecap.xml
@@ -111,10 +111,9 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_preferences"
             opencv:backgroundTint="@android:color/holo_blue_dark"
-            android:layout_marginBottom="1dp"
-            android:layout_marginLeft="16dp"
-            android:visibility="invisible"
-            opencv:elevation="0dp" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:visibility="invisible" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/buttonAlphaToggle"
@@ -124,10 +123,9 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_view"
             opencv:backgroundTint="@android:color/holo_blue_dark"
-            android:layout_marginBottom="1dp"
-            android:layout_marginLeft="16dp"
-            android:visibility="invisible"
-            opencv:elevation="0dp"/>
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:visibility="invisible"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/buttonShowVpCaptures"
@@ -137,10 +135,9 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_gallery"
             opencv:backgroundTint="@android:color/holo_blue_dark"
-            android:layout_marginBottom="4dp"
-            android:layout_marginLeft="16dp"
-            android:visibility="invisible"
-            opencv:elevation="0dp"/>
+            android:layout_marginBottom="32dp"
+            android:layout_marginStart="16dp"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 
@@ -153,8 +150,8 @@
         android:clickable="true"
         android:onClick="onButtonClick"
         android:background="@drawable/circular_button"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="16dp"
         android:src="@drawable/ic_skip_previous_white_18dp"
         android:scaleType="fitCenter"
         android:padding="10dp"
@@ -169,8 +166,8 @@
         android:clickable="true"
         android:onClick="onButtonClick"
         android:background="@drawable/circular_button"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_skip_next_white_18dp"
         android:scaleType="fitCenter"
         android:padding="10dp"
@@ -276,14 +273,14 @@
         android:layout_alignParentEnd="true"
         android:background="@drawable/border_ar_switch"
         android:visibility="visible"
-        android:layout_margin="0dp">
+        android:layout_margin="8dp">
 
         <Switch
             android:id="@+id/arSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="6dp"
+            android:layout_margin="8dp"
             android:visibility="visible"
             android:theme="@style/AppTheme"
             />
@@ -353,11 +350,10 @@
         opencv:srcCompat="@android:drawable/ic_menu_camera"
         android:layout_below="@id/arSwitchLinearLayout"
         android:visibility="invisible"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginRight="16dp"
-        opencv:backgroundTint="@android:color/holo_blue_dark"
-        opencv:elevation="0dp"/>
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="16dp"
+        opencv:backgroundTint="@android:color/holo_blue_dark" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/videoCameraShutterButton"
@@ -370,11 +366,10 @@
         opencv:srcCompat="@android:drawable/presence_video_online"
         android:layout_below="@id/cameraShutterButton"
         android:visibility="invisible"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginRight="16dp"
-        opencv:backgroundTint="@android:color/holo_blue_dark"
-        opencv:elevation="0dp"/>
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="16dp"
+        opencv:backgroundTint="@android:color/holo_blue_dark" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/videoCameraShutterStopButton"
@@ -387,11 +382,10 @@
         opencv:srcCompat="@android:drawable/presence_video_online"
         android:layout_below="@id/videoCameraShutterButton"
         android:visibility="gone"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginRight="16dp"
-        opencv:backgroundTint="@android:color/holo_red_dark"
-        opencv:elevation="0dp"/>
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="16dp"
+        opencv:backgroundTint="@android:color/holo_red_dark" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -400,8 +394,7 @@
         android:gravity="top|center"
         android:layout_below="@id/videoCameraShutterStopButton"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="1dp"
-        android:layout_marginRight="16dp">
+        android:layout_margin="16dp">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/positionCertifiedButton"
@@ -412,8 +405,7 @@
             opencv:srcCompat="@drawable/ic_location_on_white_18dp"
             opencv:backgroundTint="@android:color/holo_green_dark"
             android:layout_marginTop="0dp"
-            android:layout_marginBottom="1dp"
-            opencv:elevation="0dp"/>
+            android:layout_marginBottom="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/timeCertifiedButton"
@@ -423,9 +415,8 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@drawable/ic_access_time_white_18dp"
             opencv:backgroundTint="@android:color/holo_green_dark"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="1dp"
-            opencv:elevation="0dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/connectedToServerButton"
@@ -436,8 +427,7 @@
             opencv:srcCompat="@drawable/ic_cloud_upload_white_18dp"
             opencv:backgroundTint="@android:color/holo_green_dark"
             android:layout_marginBottom="0dp"
-            android:layout_marginTop="1dp"
-            opencv:elevation="0dp"/>
+            android:layout_marginTop="5dp" />
 
     </LinearLayout>
 
@@ -451,7 +441,7 @@
         android:layout_above="@id/buttonShowPreviousVpCapture"
         android:layout_alignParentStart="true"
         android:visibility="gone"
-        android:layout_margin="8dp">
+        android:layout_margin="16dp">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/deleteLocalMediaButton"
@@ -461,9 +451,8 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_delete"
             opencv:backgroundTint="@color/mymensorbluedark"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"
-            opencv:elevation="0dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/shareMediaButton"
@@ -473,9 +462,8 @@
             opencv:fabSize="mini"
             opencv:srcCompat="@android:drawable/ic_menu_share"
             opencv:backgroundTint="@color/mymensorbluedark"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            opencv:elevation="0dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp" />
 
     </LinearLayout>
 
@@ -488,7 +476,7 @@
         android:visibility="gone"
         android:layout_alignParentEnd="true"
         android:layout_above="@id/buttonShowNextVpCapture"
-        android:layout_margin="8dp">
+        android:layout_margin="16dp">
 
         <ImageView
             android:id="@+id/positionCertifiedImageview"
@@ -496,8 +484,7 @@
             android:layout_height="48dp"
             android:background="@drawable/circular_button_green"
             android:layout_marginTop="0dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="1dp"
+            android:layout_marginBottom="5dp"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:src="@drawable/ic_location_on_white_18dp"
@@ -510,9 +497,8 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/circular_button_green"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:src="@drawable/ic_access_time_white_18dp"
