--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="SnackbarTheme" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@android:color/holo_blue_bright</item>
+        <item name="android:textColor">@android:color/holo_blue_light</item>
+    </style>
+
 </resources>
